Replaced most enumerate with itemize and most itemizes with enumerates

--- a/T2/tutorial2.tex
+++ b/T2/tutorial2.tex
@@ -13,12 +13,12 @@ These are the sensitivities that StochSS produces. There is no rescaling to make
 \section{Example: Michaelis-Menten}
 
 In this example we will study the Michaelis-Menten model from the StochSS Public Library. Details on the model can be found in \cite{wiki-michaelis-menten}.
-\begin{itemize}
+\begin{enumerate}
 \item Import the model from the public library. By default, it will be called \textit{michaelis\_menten}.
 \item Navigate to the \textbf{Simulation Manager}, select the model, and click \textbf{Next}.
 \item Under \textbf{Simulation type}, select \textit{Deterministic + Sensitivity}.
 \item You can now select the parameters for which you wish to compute sensitivities. For instance you could select $Km$, $k3$, $mu$, and $Vmax$, to perform sensitivity analysis with only these parameters.
 \item Click \textbf{Run Locally}. 
 \item Navigate to the \textbf{Job Summary} page to analyze the output. You can plot species trajectories as well as sensitivities.
-\end{itemize}
+\end{enumerate}
 
