--- a/T4/tutorial4.tex
+++ b/T4/tutorial4.tex
@@ -5,7 +5,7 @@ The spatial stochastic simulation capabilities in StochSS are based on PyURDME \
 
 \section{Example: Annihilation of two species in a cylinder}
 We will build a simple annihilation model based on an cylinder geometry. At each end of the cylinder, different chemicals will be produced. When they diffuse and meet at the center, they will annihilate each other.
-\begin{itemize}
+\begin{enumerate}
 \item Navigate to the main \textbf{Model editor}.
 \item Add a new model. Select \textit{Population, spatial} in the dropdown menu.
  \item Click \textbf{Mesh} and select \textit{Cylinder}. The cylindrical mesh is divided into three subdomains which can be visualized with the controls below the wireframe view.
@@ -28,4 +28,4 @@ We will build a simple annihilation model based on an cylinder geometry. At each
 \item In a few seconds you will be directed to the \textbf{Job Status} page where you can check the status of your simulation.
 \item Once your simulation is complete, click \textbf{View results} to open the \textbf{Job summary} page, where you can visualize the diffusion of the two species over time within the cylindrical container and download the output files of the simulation.
 
-\end{itemize}
+\end{enumerate}
