Added short section on parameter sweeps. The manual has been updated with instructions for how to export Notebooks.

--- a/main.tex
+++ b/main.tex
@@ -134,6 +134,8 @@
 \input{T3/tutorial3.tex}
 \input{T4/tutorial4.tex}
 \input{T6/tutorial6.tex}
+\input{PSweep/psweep.tex}
+\input{Vis/vis.tex}
 \input{T7/tutorial7.tex}
 \input{custommesh.tex}
 
