Changed installation instructions, and commented out the 'Flex Cloud'-section.

--- a/main.tex
+++ b/main.tex
@@ -136,7 +136,7 @@
 \input{T6/tutorial6.tex}
 \input{PSweep/psweep.tex}
 \input{Vis/vis.tex}
-\input{T7/tutorial7.tex}
+%\input{T7/tutorial7.tex}
 \input{custommesh.tex}
 
 
