--- a/Install.tex
+++ b/Install.tex
@@ -2,7 +2,13 @@
 
 \chapter{Installation}
 
-StochSS supports Mac OS X, Linux, and Windows through the Docker platform. To install StochSS, you'll need to install Docker on your computer, and then use the appropriate StochSS launch application to initialize and run your StochSS Docker container.
+\section{Try StochSS}
+
+It is possible to try StochSS online at try.stochss.org by signing up with your e-mail address. Nothing has to be installed locally, and all modeling capabilities of StochSS are available. It is \emph{not} possible to take advantage of advanced cloud capabilities (see Section \ref{sec:cc}) through the try.stochss.org-server, so for the user with the need to run large-scale computations, we recommend to consider a local install after trying out StochSS online.
+
+\section{Install StochSS}
+
+StochSS supports Mac OS X, Linux, and Windows through the Docker platform. To install StochSS, you will need to install Docker on your computer, and then use the appropriate StochSS launch application to initialize and run your StochSS Docker container. Docker is free software that automates the deployment of Linux applications inside software containers. To download Docker, visit https://www.docker.com/.
 
 For instructions on how to install the latest version of StochSS for your platform, please see the StochSS website http://www.stochss.org/. The source code, together with installation instructions, is also available on GitHub: https://github.com/StochSS/stochss/tree/master/stochss-launcher.
 
