--- a/T6/tutorial6.tex
+++ b/T6/tutorial6.tex
@@ -1,5 +1,5 @@
 \chapter{Cloud Computing}
-
+\label{sec:cc}
 \section{Credentials}
 StochSS provides the options to run jobs using the Amazon cloud infrastructures. In order to use Amazon Elastic Computing Cloud (EC2), Simple Storage Service (S3) and DynamoDB database, which are all required for running jobs in the cloud, you need an Amazon Web Services (AWS) account and a credential pair (consisting of a secret key and an access key) in hand. 
 
