--- a/main.tex
+++ b/main.tex
@@ -134,6 +134,7 @@
 \input{T3/tutorial3.tex}
 \input{T4/tutorial4.tex}
 \input{T6/tutorial6.tex}
+\input{cluster/cluster.tex}
 \input{PSweep/psweep.tex}
 \input{Vis/vis.tex}
 %\input{T7/tutorial7.tex}
