--- a/main.tex
+++ b/main.tex
@@ -77,7 +77,8 @@
 
 
 \usepackage{xcolor}
-\usepackage[many]{tcolorbox}
+%\usepackage[many]{tcolorbox}
+\usepackage{tcolorbox}
 \tcbuselibrary{listings}
 
 \definecolor{light-gray}{gray}{0.95}
